--- a/notebook/crewai_parser_demo.ipynb
+++ b/notebook/crewai_parser_demo.ipynb
@@ -1,1 +1,311 @@
 
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "gpuType": "T4"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "accelerator": "GPU"
+  },
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5EhczLheYlXr",
+        "outputId": "3194f898-d6af-4ee8-cd70-892be757ad90"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'Charm'...\n",
+            "remote: Enumerating objects: 877, done.\u001b[K\n",
+            "remote: Counting objects: 100% (281/281), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (205/205), done.\u001b[K\n",
+            "remote: Total 877 (delta 175), reused 65 (delta 65), pack-reused 596 (from 2)\u001b[K\n",
+            "Receiving objects: 100% (877/877), 518.90 KiB | 2.73 MiB/s, done.\n",
+            "Resolving deltas: 100% (319/319), done.\n"
+          ]
+        }
+      ],
+      "source": [
+        "!git clone https://github.com/CharmAIOS/Charm.git"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /content/Charm"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ic76uarIY66e",
+        "outputId": "7d33193b-8870-492b-831a-82923b234b21"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/Charm\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git checkout -b feature/crewai-parser"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "68mtQQZeuq0b",
+        "outputId": "6de4aef2-8d5f-4490-a6c9-7d340bd73a37"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Switched to a new branch 'feature/crewai-parser'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import importlib.util\n",
+        "import json\n",
+        "from pathlib import Path\n",
+        "from typing import Any, Dict, List\n",
+        "\n",
+        "from jsonschema import validate"
+      ],
+      "metadata": {
+        "id": "aY0pKDzmY7IK"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "parser_code = r\"\"\"import importlib.util\n",
+        "import json\n",
+        "from pathlib import Path\n",
+        "from typing import Any, Dict, List\n",
+        "from jsonschema import validate\n",
+        "\n",
+        "class CrewAIParser:\n",
+        "    def __init__(self, schema_path: str = \"docs/contracts/uac/schema.json\"):\n",
+        "        self.schema = json.loads(Path(schema_path).read_text())\n",
+        "\n",
+        "    # ------------------------------------------------------------\n",
+        "    # Load CrewAI fixture dynamically\n",
+        "    # ------------------------------------------------------------\n",
+        "    def load_fixture(self, fixture_path: str):\n",
+        "        spec = importlib.util.spec_from_file_location(\"crewai_fixture\", fixture_path)\n",
+        "        module = importlib.util.module_from_spec(spec)\n",
+        "        spec.loader.exec_module(module)\n",
+        "        return module\n",
+        "\n",
+        "    # ------------------------------------------------------------\n",
+        "    # Main parser — convert CrewAI → UAC\n",
+        "    # ------------------------------------------------------------\n",
+        "    def parse(self, fixture_module: Any) -> Dict[str, Any]:\n",
+        "        objects = [getattr(fixture_module, name) for name in dir(fixture_module)]\n",
+        "        agents = self._collect_agents(objects)\n",
+        "        crew = self._collect_crew(objects)\n",
+        "\n",
+        "        if not agents:\n",
+        "            raise ValueError(\"No Agent objects found in CrewAI fixture\")\n",
+        "        if not crew:\n",
+        "            raise ValueError(\"No Crew object found in fixture\")\n",
+        "\n",
+        "        # -----------------------------\n",
+        "        # Normalize agents\n",
+        "        # -----------------------------\n",
+        "        uac_agents = []\n",
+        "        for agent in agents:\n",
+        "            uac_agents.append(self._convert_agent(agent))\n",
+        "\n",
+        "        # -----------------------------\n",
+        "        # Normalize workflow\n",
+        "        # -----------------------------\n",
+        "        workflow = self._convert_workflow(crew, agents)\n",
+        "\n",
+        "        # -----------------------------\n",
+        "        # Full UAC dict\n",
+        "        # -----------------------------\n",
+        "        uac = {\n",
+        "            \"uac_version\": \"1.0\",\n",
+        "            \"framework\": \"crewai\",\n",
+        "            \"agents\": uac_agents,\n",
+        "            \"workflows\": [workflow],\n",
+        "            \"metadata\": {\n",
+        "                \"source\": \"crewai\",\n",
+        "                \"origin_file\": getattr(fixture_module, \"__file__\", None),\n",
+        "            },\n",
+        "        }\n",
+        "\n",
+        "        # Validate against schema\n",
+        "        validate(instance=uac, schema=self.schema)\n",
+        "\n",
+        "        return uac\n",
+        "\n",
+        "    # ------------------------------------------------------------\n",
+        "    # Collectors\n",
+        "    # ------------------------------------------------------------\n",
+        "    def _collect_agents(self, objects: List[Any]):\n",
+        "        return [o for o in objects if o.__class__.__name__ == \"Agent\"]\n",
+        "\n",
+        "    def _collect_crew(self, objects: List[Any]):\n",
+        "        crews = [o for o in objects if o.__class__.__name__ == \"Crew\"]\n",
+        "        return crews[0] if crews else None\n",
+        "\n",
+        "    # ------------------------------------------------------------\n",
+        "    # Agent → UAC Agent\n",
+        "    # ------------------------------------------------------------\n",
+        "    def _convert_agent(self, agent: Any) -> Dict[str, Any]:\n",
+        "        name = getattr(agent, \"name\", \"Unnamed Agent\")\n",
+        "        role = getattr(agent, \"role\", \"\")\n",
+        "        persona = getattr(agent, \"backstory\", role)\n",
+        "        goal = getattr(agent, \"goal\", \"\")\n",
+        "        tools = getattr(agent, \"tools\", [])\n",
+        "        return {\n",
+        "            \"id\": name.lower().replace(\" \", \"_\"),\n",
+        "            \"persona\": {\n",
+        "                \"name\": name,\n",
+        "                \"description\": persona,\n",
+        "            },\n",
+        "            \"goals\": [goal],\n",
+        "            \"capabilities\": [\n",
+        "                {\n",
+        "                    \"name\": t.__class__.__name__,\n",
+        "                    \"type\": \"tool\",\n",
+        "                    \"metadata\": {\n",
+        "                        \"origin\": \"crewai\",\n",
+        "                        \"class\": t.__class__.__name__,\n",
+        "                    },\n",
+        "                }\n",
+        "                for t in tools\n",
+        "            ],\n",
+        "            \"raw_framework_data\": {\n",
+        "                \"repr\": repr(agent),\n",
+        "                \"attributes\": {\n",
+        "                    k: str(getattr(agent, k))\n",
+        "                    for k in dir(agent)\n",
+        "                    if not k.startswith(\"_\")\n",
+        "                },\n",
+        "            },\n",
+        "        }\n",
+        "\n",
+        "    # ------------------------------------------------------------\n",
+        "    # Workflow (agents in execution order)\n",
+        "    # ------------------------------------------------------------\n",
+        "    def _convert_workflow(self, crew: Any, agents: List[Any]) -> Dict[str, Any]:\n",
+        "        agent_names = [getattr(a, \"name\", a.__class__.__name__) for a in agents]\n",
+        "        # Build linear edges (naive but acceptable for this fixture)\n",
+        "        edges = []\n",
+        "        for i in range(len(agent_names) - 1):\n",
+        "            edges.append({\"from\": agent_names[i], \"to\": agent_names[i + 1]})\n",
+        "        return {\n",
+        "            \"id\": \"crewai_workflow\",\n",
+        "            \"nodes\": agent_names,\n",
+        "            \"edges\": edges,\n",
+        "        }\n",
+        "\"\"\"\n",
+        "from pathlib import Path\n",
+        "Path(\"charm/parsers\").mkdir(parents=True, exist_ok=True)\n",
+        "with open(\"charm/parsers/crewai_parser.py\", \"w\") as f:\n",
+        "    f.write(parser_code)\n",
+        "print(\"Parser created at charm/parsers/crewai_parser.py\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9AjkDYQCY7LC",
+        "outputId": "c9ef66a1-9948-4662-ae10-b1a442c8b0fe"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Parser created at charm/parsers/crewai_parser.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git add charm/parsers/crewai_parser.py"
+      ],
+      "metadata": {
+        "id": "Qp9qpsv6Y7N5"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git push origin feature/crewai-parser\n"
+      ],
+      "metadata": {
+        "id": "HSodf-2YvEqC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "aZIz7PKQvEwZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "z5h0VaMdvE3t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "8ai_1FVCY3ic"
+      }
+    }
+  ]
+}
